package ru.mai.testclasses;

/**
 * @author Beaver
 */
public class ClassD implements Interface1 {

    @Override
    public void print() {
        System.out.print("ClassD string");
    }
}
