package ru.mai.testclasses;

/**
 * @author Beaver
 */
public interface Interface1 {

    double PI = 3.14;

    void print();
}
